finalizing: added prefixes and fixed the api

--- a/src/index.html
+++ b/src/index.html
@@ -12,6 +12,6 @@
     <script nomodule src="/build/pwc-sliding-panel.js"></script>
   </head>
   <body>
-    <pwc-sliding-panel position="left">Content</pwc-sliding-panel>
+    <pwc-sliding-panel anchor="left">Content</pwc-sliding-panel>
   </body>
 </html>
