--- a/src/index.html
+++ b/src/index.html
@@ -12,6 +12,21 @@
     <script nomodule src="/build/pwc-sliding-panel.js"></script>
   </head>
   <body>
-    <pwc-sliding-panel anchor="left">Content</pwc-sliding-panel>
+    <pwc-sliding-panel anchor="left">
+      <pwc-sliding-panel-content>
+        What is Lorem Ipsum? Lorem Ipsum is simply dummy text of the printing
+        and typesetting industry. Lorem Ipsum has been the industry's standard
+        dummy text ever since the 1500s, when an unknown printer took a galley
+        of type and scrambled it to make a type specimen book. It has survived
+        not only five centuries, but also the leap into electronic typesetting,
+        remaining essentially unchanged. It was popularised in the 1960s with
+        the release of Letraset sheets containing Lorem Ipsum passages, and more
+        recently with desktop publishing software like Aldus PageMaker including
+        versions of Lorem Ipsum.
+      </pwc-sliding-panel-content>
+      <pwc-sliding-panel-toggle>
+        Toggle Handle
+      </pwc-sliding-panel-toggle>
+    </pwc-sliding-panel>
   </body>
 </html>
